--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Brewy</string>
-    <string name="mapboxTokenRoute">dasfdsf</string>
+
+    <!-- Access Token -->
+    <string name="googleMapsApiRoute" translatable="false">@string/googleMapsApiKey</string>
 </resources>
