--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Brewy</string>
+    <string name="transitionNameName" translatable="false">transition:NAME</string>
+    <string name="transitionNameCircle" translatable="false">transition:CIRCLE</string>
 
 </resources>
